--- a/CHANGES.txt
+++ b/CHANGES.txt
@@ -1,64 +1,8 @@
-=======
-CHANGES
-=======
-
-1.0.3 (Unreleased)
+1.0.2 (Unreleased)
 ------------------
 
 
-1.0.2 (2009-08-13)
+1.0.1 (2010-01-19)
 ------------------
 
-- Set permission to edit sequrity form
-
-
-1.0.1 (2009-07-17)
-------------------
-
-- Fixed dependencies
-
-- Added PermissionsUpdatedEvent event
-
-- Update test for chameleon enabled setup
-
-
-1.0.0 (2009-06-21)
-------------------
-
-- UI refactored
-
-- Simplify zojax:contentpermission directive
-
-- Added reindex security info code
-
-- Removed 'globalpermisison' directive
-
-- Removed content permissions configlet
-
-- python2.4 compatibility
-
-- Copyright changed to 'Zope Foundation and Contributors'
-
-
-0.9.3 (2009-05-05)
-------------------
-
-- Do not use z3c.autoinclude
-
-
-0.9.2 (2009-03-16)
-------------------
-
-- Added IPermissionModifiedEvent event
-
-
-0.9.1 (2009-03-15)
-------------------
-
-- Do not load translations
-
-
-0.9.0 (2009-03-11)
-------------------
-
-- Initial release.
+- zojax initial release
